--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "babel-loader": "8.1",
     "clsx": "^1.1.1",
     "date-fns": "^2.16.1",
+    "material-auto-rotating-carousel": "^3.0.2",
     "notistack": "^1.0.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
