--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,11 +14,13 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "babel-loader": "8.1",
+    "chart.js": "^2.9.4",
     "clsx": "^1.1.1",
     "date-fns": "^2.16.1",
     "material-auto-rotating-carousel": "^3.0.2",
     "notistack": "^1.0.3",
     "react": "^17.0.1",
+    "react-chartjs-2": "^2.11.1",
     "react-dom": "^17.0.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
