--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,8 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "socket.io": "^4.0.2",
+    "socket.io-client": "^4.0.2",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
