--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ cryptography==3.3.1
 daphne==3.0.1
 Django==3.1.4
 django-cors==0.1
+django-cors-headers==3.7.0
 djangorestframework==3.12.2
 djangorestframework-jwt==1.11.0
 hyperlink==20.0.1
