--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,3 @@
-REACT_APP_API_URL=http://127.0.0.1:8000
-REACT_APP_SOCKET_URL=ws://localhost:8000
-REACT_APP_API_KEY=AIzaSyAQ1WdOEHV3Ev8I7ma80RtI5nKAVjOdsr0
+REACT_APP_API_URL=http://104.155.163.150
+REACT_APP_SOCKET_URL=ws://104.155.163.150
+REACT_APP_API_KEY=AIzaSyBR25jzMjLW8okagFlCf87hhx6SFuMfO04
