--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "date-fns": "^2.16.1",
     "dotenv": "^8.2.0",
     "google-maps-react": "^2.0.6",
+    "jwt-decode": "^3.1.2",
     "material-auto-rotating-carousel": "^3.0.2",
     "notistack": "^1.0.3",
     "react": "^17.0.1",
