--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "notistack": "^1.0.3",
     "react": "^17.0.1",
     "react-chartjs-2": "^2.11.1",
+    "react-chat-widget": "^3.0.5",
     "react-dom": "^17.0.1",
     "react-geocode": "^0.2.3",
     "react-router": "^5.2.0",
