--- a/requirements.txt
+++ b/requirements.txt
@@ -13,17 +13,22 @@ django-cors==0.1
 django-cors-headers==3.7.0
 djangorestframework==3.12.2
 djangorestframework-jwt==1.11.0
+gunicorn==20.1.0
+h11==0.12.0
+httptools==0.2.0
 hyperlink==20.0.1
 idna==3.1
 incremental==17.5.0
 joblib==1.0.0
 nltk==3.5
+psycopg2==2.8.6
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.20
 PyHamcrest==2.0.2
 PyJWT==1.7.1
 pyOpenSSL==20.0.1
+python-dotenv==0.17.1
 pytz==2020.4
 regex==2020.11.13
 service-identity==18.1.0
@@ -33,5 +38,8 @@ textblob==0.15.3
 tqdm==4.56.0
 Twisted==20.3.0
 txaio==20.12.1
+typing-extensions==3.10.0.0
 urllib3==1.26.2
+uvicorn==0.13.4
+uvloop==0.15.2
 zope.interface==5.2.0
