--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^17.0.1",
     "react-geocode": "^0.2.3",
     "react-horizontal-scrolling-menu": "^0.7.10",
+    "react-pdf": "^5.3.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
