--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.13.0",
     "@date-io/date-fns": "^1.3.13",
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
@@ -18,9 +19,11 @@
     "clsx": "^1.1.1",
     "date-fns": "^2.16.1",
     "dotenv": "^8.2.0",
+    "framer-motion": "^4.1.17",
     "google-maps-react": "^2.0.6",
     "jwt-decode": "^3.1.2",
     "material-auto-rotating-carousel": "^3.0.2",
+    "material-table": "^1.69.3",
     "notistack": "^1.0.3",
     "react": "^17.0.1",
     "react-chartjs-2": "^2.11.1",
@@ -32,6 +35,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-swipeable-views": "^0.14.0",
     "recharts": "^2.0.9",
     "socket.io-client": "^4.0.2",
     "web-vitals": "^0.2.4"
@@ -61,6 +65,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-syntax-class-properties": "^7.12.13",
     "eslint-plugin-react": "^7.23.2"
   }
 }
